# darwin-notifications

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  python-app.yml
darwin_notifications/: __main__.py  api.py
